Edited Header UI

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <h2>SEARCH FOR YOUR FAVORITE MOVIE</h2>
         <form id="form">
             <input 
                 type="text" 
